<resources>
    <string name="app_name">Builder\'s Toolkit</string>
    <string name="title">MTG\nBuilder\'s Toolkit</string>

    <string name="channel_name">Database Updates</string>

    <string name="mana_description">An image of the 5 mana symbols</string>
    <string name="splash_loading">Loading…</string>

    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="login_prompt">Have an account? Click here to login</string>
    <string name="register_prompt">Don\'t have an account? Click here to register</string>
    <string name="required_field">Required</string>
    <string name="failed_login">Invalid Username or Password</string>
    <string name="user_exists">Username already exists</string>

    <string name="nav_scan">Scan Cards</string>
    <string name="nav_search">Search Cards</string>
    <string name="nav_view">View Collection</string>
    <string name="nav_logout">Logout</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="button_inc">+</string>
    <string name="button_dec">-</string>
    <string name="zero">0</string>
    <string name="amount_hint">NUM</string>
    <string name="filler_name">MTG Card Name</string>
    <string name="back">Back</string>
    <string name="add">Add</string>

    <string name="search_hint">Card Name</string>
    <string name="button_search">Search</string>
    <string name="no_results">No Results.</string>
    <string name="x_results">%s Results.</string>

    <string name="collection">Your Collection</string>

    <string name="remove_collection_card">Remove %s from your collection?</string>

    <string name="dialog_cancel">Cancel</string>
    <string name="logout_prompt">Are you sure you want to logout?</string>

    <string name="user_object_key">USER OBJECT KEY</string>
    <string name="user_name_key">USER NAME KEY</string>
    <string name="preference_file_key">com.dragynslayr.magicdb2.PREFERENCE_FILE_KEY</string>
    <string name="user_token_key">USER TOKEN KEY</string>
    <string name="bulk_date_key">BULK DATE KEY</string>
</resources>