<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:background="@drawable/card_item_border">

    <TextView
        android:id="@+id/id_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:layout_marginEnd="5dp"
        android:padding="8dp"
        android:text="@string/filler_name"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/amount_area"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/amount_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/name_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/amount_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3dp"
            android:layout_marginTop="2sp"
            android:background="@color/light_gray"
            android:hint="@string/amount_hint"
            android:importantForAutofill="no"
            android:inputType="numberSigned"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="50sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dec_button"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_marginHorizontal="3dp"
            app:icon="@drawable/icon_dec"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/inc_button"
            app:layout_constraintTop_toBottomOf="@id/amount_input" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/inc_button"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="3dp"
            app:icon="@drawable/icon_inc"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:layout_constraintLeft_toRightOf="@id/dec_button"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/amount_input" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>